<resources>

    <string name="app_name">积木</string>

    <string name="openDrawerContentDescRes">Navigation View</string>
    <string name="closeDrawerContentDescRes">Navigation View Closed</string>

    <string name="title_pick_photo">照片</string>
    <string name="title_pick_place">位置</string>
    <string name="title_about">关于</string>
    <string name="title_settings">设置</string>

    <string name="place_autocomplete_hint">请输入你要搜索的位置</string>
    <string name="place_selected_place">最近一次搜索的位置:</string>
    <string name="place_get_current_place">自动获取当前位置</string>
    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="place_fuck_gfw">嘿，你科学上网了吗？</string>

    <string name="about_introduce">「积木」- 旨在让应用开发如同搭积木一般充满乐趣与成就感。\n\n开源是必须的，如果你觉得「她」是个值得推荐的应用：），并且希望更多的人能知道她，你只需点击右上角的分享按钮进行分享。\n\n你的支持将是我最大的动力与褒奖！</string>
    <string name="about_menu_action_share">分享</string>
    <string name="about_share_text">积木 - 享受搭建应用的乐趣\nhttps://github.com/tangqi92/BuildingBlocks</string>
    <string name="about_app_name_with_introduce">积木 - 享受搭建应用的乐趣</string>
    <string name="about_developers">关于我</string>
    <string name="about_developer_description">一个 Android 菜鸟</string>
    <string name="about_open_source_lis">感谢开源</string>
    <string name="about_thanks_to">特别鸣谢</string>
    <string name="about_thanks_to_detail">感谢 <a href="http://weibo.com/cat93/">Mao</a> 提供应用图标\n\n感谢 <a href="http://weibo.com/rainynow">Troy和陌生人</a> 参与 dev 版本的开发</string>
    <string name="about_introduce_and_help">介绍与帮助</string>
    <string name="about_open_source_libraries_list">com.jakewharton:butterknife:7.0.1\ncom.soundcloud.android:android-crop:1.0.0@aar\ncom.loopj.android:android-async-http:1.4.8\ncom.github.bumptech.glide:glide:3.6.1\nme.imid.swipebacklayout.lib:library:1.0.0\norg.jsoup:jsoup:1.8.3\ncom.github.jorgecastilloprz:fabprogresscircle:1.01@aar\n</string>

    <!-- 设置 -->
    <string name="settings_version">版本更新</string>
    <string name="settings_version_code">版本:</string>
    <string name="settings_auto_update">自动更新应用</string>
    <string name="settings_auto_push">推送精选内容</string>
    <string name="settings_general_settings">常规</string>
    <string name="settings_push_settings">推送</string>
    <string name="setting_enable_cahce">允许缓存</string>
    <string name="cache_is_enable">当前读取的是缓存</string>
    <string name="cache_is_disable">当前未设置缓存</string>
    <string name="delete_cache">清除缓存</string>
    <string name="way_to_get_data">数据获取方式</string>
    <string name="dialog_way_to_get_data">选择</string>
    <string name="default_way_to_get_data">http+</string>

    <string name="search_hint">搜索</string>
    <string name="search_result_title">搜索:</string>

    <string name="menu_action_feedback">用户反馈</string>
    <string name="men_action_refresh">刷新</string>
    <string name="men_action_read_mode">切换模式</string>
    <string name="menu_action_pick_photo">选取</string>

    <string name="snack_exit_once_more">再按一次退出积木</string>
    <string name="snack_rest_over_to_you">剩下的就交给你了：）</string>
    <string name="snack_load_error">加载失败，请重试</string>
    <string name="snack_network_error">网络有问题</string>
    <string name="snack_network_error_load_cache">网络有问题，尝试读取本地数据</string>

    <string name="drawer_item_home">首页</string>
    <string name="drawer_item_collection">我的收藏</string>
    <string name="drawer_item_read">浏览历史</string>
    <string name="drawer_item_additional">附加功能</string>
    <string name="drawer_item_pick_photo">照片选取</string>
    <string name="drawer_item_pick_place">位置选取</string>
    <string name="drawer_item_settings">设置</string>
    <string name="drawer_item_about">关于</string>

    <!-- GsonView -->
    <string name="activity_gson_news_image">用来显示Gson里面的image属性</string>
    <string name="activity_gson_news_author">作者</string>
    <string name="activity_gson_news_bio">反正你又看不见我╮(╯▽╰)╭</string>
    <string name="service_begin_update">开始下载更新</string>
    <string name="service_updating">正在下载更新</string>
    <string name="service_update_error">下载失败</string>
    <string name="service_update_cancel">取消</string>
    <string name="service_update_restart">重新开始</string>
    <string name="send_log">发送日志</string>

    <string name="crash_toast">我好像坏掉了，但是我记下了细节≧︿≦"</string>
    <string name="others_error_toast">好像出了什么问题，请重试下</string>
    <string name="network_error_toast">网络出现问题啦，请检查下你的网络连接</string>
</resources>
